--- a/ECommerce.CheckoutService/ECommerce.CheckoutService.csproj
+++ b/ECommerce.CheckoutService/ECommerce.CheckoutService.csproj
@@ -11,6 +11,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="5.1.321" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="5.1.321" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.CheckoutService.Model\ECommerce.CheckoutService.Model.csproj" />
+    <ProjectReference Include="..\UserActor.Interfaces\UserActor.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
